// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications case pages Preview and publish page GET /case/123/preview-and-publish if already published, should render the page with the previous publishing info 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <form id="pins-publish-case" class="govuk-grid-row " method="post" action="">
        <div class="govuk-grid-column-full">
            <h1 class="govuk-heading-l govuk-!-margin-bottom-2">Preview and publish project</h1>
            <p class="govuk-body govuk-!-margin-bottom-6">Check details before publishing</p>
        </div>
        <div class="govuk-grid-column-two-thirds">
            <div>
                <div class="govuk-summary-card">
                    <div class="govuk-summary-card__title-wrapper">
                        <h2 class="govuk-summary-card__title"> Project information</h2>
                        <div class="govuk-summary-card__actions"><a class="govuk-link" href="/applications-service/case/4/overview">Edit<span class="govuk-visually-hidden"> Project information (Project information)</span></a>
                        </div>
                    </div>
                    <div class="govuk-summary-card__content">
                        <dl class="govuk-summary-list">
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case reference number</dt>
                                <dd class="govuk-summary-list__value">CASE/04</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Project name</dt>
                                <dd class="govuk-summary-list__value">Title CASE/04</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Sector</dt>
                                <dd class="govuk-summary-list__value">Transport EN</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Subsector</dt>
                                <dd class="govuk-summary-list__value">Highways EN</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case stage</dt>
                                <dd class="govuk-summary-list__value">Pre-Application</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Project description</dt>
                                <dd class="govuk-summary-list__value">Amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore
                                    et dolore magna aliqua Ut enim ad minim veniam quis nostrud exercitation
                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Project email address</dt>
                                <dd class="govuk-summary-list__value">some@ema.il</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Project location</dt>
                                <dd class="govuk-summary-list__value">London</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Grid references</dt>
                                <dd class="govuk-summary-list__value">123456 (Easting)
                                    <br>987654 (Northing)</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Regions</dt>
                                <dd class="govuk-summary-list__value">London EN, Yorkshire EN</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Map zoom level</dt>
                                <dd class="govuk-summary-list__value">City EN</dd>
                            </div>
                        </dl>
                    </div>
                </div>
            </div>
            <div class='govuk-!-margin-top-9'>
                <div class="govuk-summary-card">
                    <div class="govuk-summary-card__title-wrapper">
                        <h2 class="govuk-summary-card__title"> Applicant information</h2>
                        <div class="govuk-summary-card__actions"><a class="govuk-link" href="/applications-service/case/4/overview">Edit<span class="govuk-visually-hidden"> Applicant information (Applicant information)</span></a>
                        </div>
                    </div>
                    <div class="govuk-summary-card__content">
                        <dl class="govuk-summary-list">
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Organisation name</dt>
                                <dd class="govuk-summary-list__value">Org name</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Website</dt>
                                <dd class="govuk-summary-list__value"><a class="govuk-link" href="website.web">website.web</a>
                                </dd>
                            </div>
                        </dl>
                    </div>
                </div>
            </div>
            <div class='govuk-!-margin-top-9'>
                <div class="govuk-summary-card">
                    <div class="govuk-summary-card__title-wrapper">
                        <h2 class="govuk-summary-card__title"> Key dates</h2>
                        <div class="govuk-summary-card__actions"><a class="govuk-link" href="/applications-service/case/4/key-dates">Edit<span class="govuk-visually-hidden"> Key dates (Key dates)</span></a>
                        </div>
                    </div>
                    <div class="govuk-summary-card__content">
                        <dl class="govuk-summary-list">
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Anticipated submission date published</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Application submitted (Section 55)</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Deadline for Acceptance decision</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date of Acceptance (Section 55)</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date of Non-Acceptance</dt>
                                <dd class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date Relevant Representations open</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date Relevant Representations close</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date Relevant Representations to appear on website</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Preliminary Meeting start date</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Examination start date</dt>
                                <dd class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Deadline for close of Examination</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Examination closing date</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Extension to close of Examination</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Deadline for submission of Recommendation</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date of Recommendation submitted to SoS</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Extension to Recommendation deadline</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Deadline for Decision</dt>
                                <dd class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date of Decision</dt>
                                <dd class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Extension to Decision deadline</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date project withdrawn</dt>
                                <dd class="govuk-summary-list__value"></dd>
                            </div>
                        </dl>
                    </div>
                </div>
            </div>
        </div>
        <div class="govuk-grid-column-full">
            <button type="submit" class="govuk-button govuk-!-margin-top-5" data-module="govuk-button">Accept and publish project</button>
        </div>
    </form>
</main>"
`;

exports[`Applications case pages Preview and publish page GET /case/123/preview-and-publish if not yet published, should render the page with no previous publishing info 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <form id="pins-publish-case" class="govuk-grid-row " method="post" action="">
        <div class="govuk-grid-column-full">
            <h1 class="govuk-heading-l govuk-!-margin-bottom-2">Preview and publish project</h1>
            <p class="govuk-body govuk-!-margin-bottom-6">Check details before publishing</p>
        </div>
        <div class="govuk-grid-column-two-thirds">
            <div>
                <div class="govuk-summary-card">
                    <div class="govuk-summary-card__title-wrapper">
                        <h2 class="govuk-summary-card__title"> Project information</h2>
                        <div class="govuk-summary-card__actions"><a class="govuk-link" href="/applications-service/case/4/overview">Edit<span class="govuk-visually-hidden"> Project information (Project information)</span></a>
                        </div>
                    </div>
                    <div class="govuk-summary-card__content">
                        <dl class="govuk-summary-list">
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case reference number</dt>
                                <dd class="govuk-summary-list__value">CASE/04</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Project name</dt>
                                <dd class="govuk-summary-list__value">Title CASE/04</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Sector</dt>
                                <dd class="govuk-summary-list__value">Transport EN</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Subsector</dt>
                                <dd class="govuk-summary-list__value">Highways EN</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case stage</dt>
                                <dd class="govuk-summary-list__value">Pre-Application</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Project description</dt>
                                <dd class="govuk-summary-list__value">Amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore
                                    et dolore magna aliqua Ut enim ad minim veniam quis nostrud exercitation
                                    ullamco laboris nisi ut aliquip ex ea commodo consequat</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Project email address</dt>
                                <dd class="govuk-summary-list__value">some@ema.il</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Project location</dt>
                                <dd class="govuk-summary-list__value">London</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Grid references</dt>
                                <dd class="govuk-summary-list__value">123456 (Easting)
                                    <br>987654 (Northing)</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Regions</dt>
                                <dd class="govuk-summary-list__value">London EN, Yorkshire EN</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Map zoom level</dt>
                                <dd class="govuk-summary-list__value">City EN</dd>
                            </div>
                        </dl>
                    </div>
                </div>
            </div>
            <div class='govuk-!-margin-top-9'>
                <div class="govuk-summary-card">
                    <div class="govuk-summary-card__title-wrapper">
                        <h2 class="govuk-summary-card__title"> Applicant information</h2>
                        <div class="govuk-summary-card__actions"><a class="govuk-link" href="/applications-service/case/4/overview">Edit<span class="govuk-visually-hidden"> Applicant information (Applicant information)</span></a>
                        </div>
                    </div>
                    <div class="govuk-summary-card__content">
                        <dl class="govuk-summary-list">
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Organisation name</dt>
                                <dd class="govuk-summary-list__value">Org name</dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Website</dt>
                                <dd class="govuk-summary-list__value"><a class="govuk-link" href="website.web">website.web</a>
                                </dd>
                            </div>
                        </dl>
                    </div>
                </div>
            </div>
            <div class='govuk-!-margin-top-9'>
                <div class="govuk-summary-card">
                    <div class="govuk-summary-card__title-wrapper">
                        <h2 class="govuk-summary-card__title"> Key dates</h2>
                        <div class="govuk-summary-card__actions"><a class="govuk-link" href="/applications-service/case/4/key-dates">Edit<span class="govuk-visually-hidden"> Key dates (Key dates)</span></a>
                        </div>
                    </div>
                    <div class="govuk-summary-card__content">
                        <dl class="govuk-summary-list">
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Anticipated submission date published</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Application submitted (Section 55)</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Deadline for Acceptance decision</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date of Acceptance (Section 55)</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date of Non-Acceptance</dt>
                                <dd class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date Relevant Representations open</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date Relevant Representations close</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date Relevant Representations to appear on website</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Preliminary Meeting start date</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Examination start date</dt>
                                <dd class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Deadline for close of Examination</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Examination closing date</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Extension to close of Examination</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Deadline for submission of Recommendation</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date of Recommendation submitted to SoS</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Extension to Recommendation deadline</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Deadline for Decision</dt>
                                <dd class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date of Decision</dt>
                                <dd class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Extension to Decision deadline</dt>
                                <dd                                 class="govuk-summary-list__value"></dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date project withdrawn</dt>
                                <dd class="govuk-summary-list__value"></dd>
                            </div>
                        </dl>
                    </div>
                </div>
            </div>
        </div>
        <div class="govuk-grid-column-full">
            <button type="submit" class="govuk-button govuk-!-margin-top-5" data-module="govuk-button">Accept and publish project</button>
        </div>
    </form>
</main>"
`;

exports[`Applications case pages Preview and publish page POST /case/123/preview-and-publish if the case is not published yet, should go the first-time success banner page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-panel govuk-panel--confirmation">
                <h1 class="govuk-panel__title"> Project page successfully published</h1>
                <div class="govuk-panel__body">
                    <p class='govuk-!-font-size-19'>Case: Title CASE/04
                        <br>Reference: CASE/04</p>
                </div>
            </div><a href="/applications-service/case/4/" class="govuk-link"> Go back to Overview</a>
        </div>
    </div>
</main>"
`;

exports[`Applications case pages Project information page GET /case/123/project-information When the case is not published should show no info about previous publishings 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="top-errors-hook" role="alert"></div>
    <div class="govuk-grid-row govuk-!-padding-top-9 govuk-!-padding-bottom-2 govuk-!-margin-left-0 govuk-!-margin-bottom-7 pins-masthead-summary">
        <div class="govuk-grid-column-full">
            <h4 class="govuk-heading-m"> CASE/04 </h4>
            <h1 class="govuk-heading-xl">Title CASE/04</h1>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full govuk-body">Transport EN, Highways EN
                    <br>
                    <br><span class="govuk-tag govuk-tag--green pins-tag--no-max-width">Pre-Application</span>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row govuk-!-margin-left-0 display--flex">
        <div class="pins-list-menu-container">
            <aside class="govuk-!-margin-bottom-8 pins-list-menu" aria-label="Case navigation">
                <h2 class="govuk-visually-hidden">Case Details Menu</h2>
                <nav>
                    <ul class="gov-list pins-list-menu">
                        <li><a class="govuk-link " href="/applications-service/case/4/"> Overview</a>
                        </li>
                        <li><a class="govuk-link " href="/applications-service/case/4/key-dates"> Key dates</a>
                        </li>
                        <li><a class="govuk-link " href="/applications-service/case/4/project-team"> Project team</a>
                        </li>
                        <li><a class="govuk-link " href="/applications-service/case/4/project-documentation"> Project documentation</a>
                        </li>
                        <li><a class="govuk-link " href="/applications-service/case/4/project-updates"> Project updates</a>
                        </li>
                        <li><a class="govuk-link " href="/applications-service/case/4/examination-timetable"> Examination timetable</a>
                        </li>
                    </ul>
                </nav>
            </aside>
        </div>
        <div class="govuk-grid-column-full">
            <h2 class="govuk-heading-m">Project information</h2>
            <table class="govuk-table">
                <caption class="govuk-table__caption govuk-visually-hidden">Project information</caption>
                <tbody class="govuk-table__body">
                    <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Case reference number</th>
                        <td class="govuk-table__cell">CASE/04</td>
                        <td class="govuk-table__cell"></td>
                    </tr>
                    <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Material change</th>
                        <td class="govuk-table__cell">No</td>
                        <td class="govuk-table__cell text-align--right"><a class="govuk-link" href="/applications-service/case/4/edit/material-change"
                            id=""> Change</a>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Sector</th>
                        <td class="govuk-table__cell">Transport EN</td>
                        <td class="govuk-table__cell"></td>
                    </tr>
                    <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Subsector</th>
                        <td class="govuk-table__cell">Highways EN</td>
                        <td class="govuk-table__cell"></td>
                    </tr>
                    <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Case stage</th>
                        <td class="govuk-table__cell">Pre-Application</td>
                        <td class="govuk-table__cell text-align--right"><a class="govuk-link" href="/applications-service/case/4/edit/stage" id=""> Change</a>
                        </td>
                    </tr>
                </tbody>
            </table>
            <div class="govuk-accordion govuk-!-margin-top-5" data-module="govuk-accordion"
            id="">
                <div class="govuk-accordion__section">
                    <div class="govuk-accordion__section-header">
                        <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="-heading-1"> Project details</span></h2>
                    </div>
                    <div id="-content-1" class="govuk-accordion__section-content">
                        <table class="govuk-table project-details">
                            <caption class="govuk-table__caption govuk-visually-hidden">Project details</caption>
                            <tbody class="govuk-table__body">
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Material change</th>
                                    <td class="govuk-table__cell">No</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/material-change"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Regions</th>
                                    <td class="govuk-table__cell project-details__regions">London EN, Yorkshire EN</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/regions"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Case stage</th>
                                    <td class="govuk-table__cell">Pre-Application</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/stage" id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Project page</th>
                                    <td class="govuk-table__cell project-details__project-page"></td>
                                    <td class="govuk-table__cell"></td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Project name</th>
                                    <td class="govuk-table__cell project-details__name">Title CASE/04</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/name" id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Project description</th>
                                    <td class="govuk-table__cell project-details__project-description">Amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore
                                        et dolore magna aliqua Ut enim ad minim veniam quis nostrud exercitation
                                        ullamco laboris nisi ut aliquip ex ea commodo consequat</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/description"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Project location</th>
                                    <td class="govuk-table__cell project-details__project-location">London</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/project-location"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Project email address</th>
                                    <td class="govuk-table__cell project-details__team-email">some@ema.il</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/team-email"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Grid references</th>
                                    <td class="govuk-table__cell project-details__grid-references">123456 (Easting)
                                        <br>987654 (Northing)</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/grid-references"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Map zoom level</th>
                                    <td class="govuk-table__cell project-details__zoom-level">City EN</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/zoom-level"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                            </tbody>
                        </table>
                    </div>
                </div>
                <div class="govuk-accordion__section">
                    <div class="govuk-accordion__section-header">
                        <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="-heading-2"> Applicant information</span></h2>
                    </div>
                    <div id="-content-2" class="govuk-accordion__section-content">
                        <dl class="govuk-summary-list">
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Organisation name</dt>
                                <dd class="govuk-summary-list__value">Org name</dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-organisation-name">Change</a>
                                </dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Contact name (Internal use only)</dt>
                                <dd                                 class="govuk-summary-list__value">John Smith</dd>
                                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-full-name">Change</a>
                                    </dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address (Internal use only)</dt>
                                <dd                                 class="govuk-summary-list__value">Applicant address, London, ABC123</dd>
                                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-address">Change</a>
                                    </dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Website</dt>
                                <dd class="govuk-summary-list__value"><a class="govuk-link" href="website.web">website.web</a>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-website">Change</a>
                                </dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Email address (Internal use only)</dt>
                                <dd                                 class="govuk-summary-list__value">email@email.co</dd>
                                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-email">Change</a>
                                    </dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Telephone number (Internal use only)</dt>
                                <dd                                 class="govuk-summary-list__value">001</dd>
                                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-telephone-number">Change</a>
                                    </dd>
                            </div>
                        </dl>
                    </div>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`Applications case pages Project information page GET /case/123/project-information When the case is published with no pending changes, should show publishing info and unpublish link 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="top-errors-hook" role="alert"></div>
    <div class="govuk-grid-row govuk-!-padding-top-9 govuk-!-padding-bottom-2 govuk-!-margin-left-0 govuk-!-margin-bottom-7 pins-masthead-summary">
        <div class="govuk-grid-column-full">
            <h4 class="govuk-heading-m"> CASE/04 </h4>
            <h1 class="govuk-heading-xl">Title CASE/04</h1>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full govuk-body">Transport EN, Highways EN
                    <br>
                    <br><span class="govuk-tag govuk-tag--green pins-tag--no-max-width">Pre-Application</span>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row govuk-!-margin-left-0 display--flex">
        <div class="pins-list-menu-container">
            <aside class="govuk-!-margin-bottom-8 pins-list-menu" aria-label="Case navigation">
                <h2 class="govuk-visually-hidden">Case Details Menu</h2>
                <nav>
                    <ul class="gov-list pins-list-menu">
                        <li><a class="govuk-link " href="/applications-service/case/4/"> Overview</a>
                        </li>
                        <li><a class="govuk-link " href="/applications-service/case/4/key-dates"> Key dates</a>
                        </li>
                        <li><a class="govuk-link " href="/applications-service/case/4/project-team"> Project team</a>
                        </li>
                        <li><a class="govuk-link " href="/applications-service/case/4/project-documentation"> Project documentation</a>
                        </li>
                        <li><a class="govuk-link " href="/applications-service/case/4/project-updates"> Project updates</a>
                        </li>
                        <li><a class="govuk-link " href="/applications-service/case/4/examination-timetable"> Examination timetable</a>
                        </li>
                    </ul>
                </nav>
            </aside>
        </div>
        <div class="govuk-grid-column-full">
            <h2 class="govuk-heading-m">Project information</h2>
            <table class="govuk-table">
                <caption class="govuk-table__caption govuk-visually-hidden">Project information</caption>
                <tbody class="govuk-table__body">
                    <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Case reference number</th>
                        <td class="govuk-table__cell">CASE/04</td>
                        <td class="govuk-table__cell"></td>
                    </tr>
                    <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Material change</th>
                        <td class="govuk-table__cell">No</td>
                        <td class="govuk-table__cell text-align--right"><a class="govuk-link" href="/applications-service/case/4/edit/material-change"
                            id=""> Change</a>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Sector</th>
                        <td class="govuk-table__cell">Transport EN</td>
                        <td class="govuk-table__cell"></td>
                    </tr>
                    <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Subsector</th>
                        <td class="govuk-table__cell">Highways EN</td>
                        <td class="govuk-table__cell"></td>
                    </tr>
                    <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Case stage</th>
                        <td class="govuk-table__cell">Pre-Application</td>
                        <td class="govuk-table__cell text-align--right"><a class="govuk-link" href="/applications-service/case/4/edit/stage" id=""> Change</a>
                        </td>
                    </tr>
                </tbody>
            </table>
            <div class="govuk-accordion govuk-!-margin-top-5" data-module="govuk-accordion"
            id="">
                <div class="govuk-accordion__section">
                    <div class="govuk-accordion__section-header">
                        <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="-heading-1"> Project details</span></h2>
                    </div>
                    <div id="-content-1" class="govuk-accordion__section-content">
                        <table class="govuk-table project-details">
                            <caption class="govuk-table__caption govuk-visually-hidden">Project details</caption>
                            <tbody class="govuk-table__body">
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Material change</th>
                                    <td class="govuk-table__cell">No</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/material-change"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Regions</th>
                                    <td class="govuk-table__cell project-details__regions">London EN, Yorkshire EN</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/regions"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Case stage</th>
                                    <td class="govuk-table__cell">Pre-Application</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/stage" id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Project page</th>
                                    <td class="govuk-table__cell project-details__project-page"></td>
                                    <td class="govuk-table__cell"></td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Project name</th>
                                    <td class="govuk-table__cell project-details__name">Title CASE/04</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/name" id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Project description</th>
                                    <td class="govuk-table__cell project-details__project-description">Amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore
                                        et dolore magna aliqua Ut enim ad minim veniam quis nostrud exercitation
                                        ullamco laboris nisi ut aliquip ex ea commodo consequat</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/description"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Project location</th>
                                    <td class="govuk-table__cell project-details__project-location">London</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/project-location"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Project email address</th>
                                    <td class="govuk-table__cell project-details__team-email">some@ema.il</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/team-email"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Grid references</th>
                                    <td class="govuk-table__cell project-details__grid-references">123456 (Easting)
                                        <br>987654 (Northing)</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/grid-references"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Map zoom level</th>
                                    <td class="govuk-table__cell project-details__zoom-level">City EN</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/zoom-level"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                            </tbody>
                        </table>
                    </div>
                </div>
                <div class="govuk-accordion__section">
                    <div class="govuk-accordion__section-header">
                        <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="-heading-2"> Applicant information</span></h2>
                    </div>
                    <div id="-content-2" class="govuk-accordion__section-content">
                        <dl class="govuk-summary-list">
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Organisation name</dt>
                                <dd class="govuk-summary-list__value">Org name</dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-organisation-name">Change</a>
                                </dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Contact name (Internal use only)</dt>
                                <dd                                 class="govuk-summary-list__value">John Smith</dd>
                                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-full-name">Change</a>
                                    </dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address (Internal use only)</dt>
                                <dd                                 class="govuk-summary-list__value">Applicant address, London, ABC123</dd>
                                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-address">Change</a>
                                    </dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Website</dt>
                                <dd class="govuk-summary-list__value"><a class="govuk-link" href="website.web">website.web</a>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-website">Change</a>
                                </dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Email address (Internal use only)</dt>
                                <dd                                 class="govuk-summary-list__value">email@email.co</dd>
                                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-email">Change</a>
                                    </dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Telephone number (Internal use only)</dt>
                                <dd                                 class="govuk-summary-list__value">001</dd>
                                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-telephone-number">Change</a>
                                    </dd>
                            </div>
                        </dl>
                    </div>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`Applications case pages Project information page GET /case/123/project-information When the case is published with pending changes, should show publishing info, unpublish link and warning about unpublished changes 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="top-errors-hook" role="alert"></div>
    <div class="govuk-grid-row govuk-!-padding-top-9 govuk-!-padding-bottom-2 govuk-!-margin-left-0 govuk-!-margin-bottom-7 pins-masthead-summary">
        <div class="govuk-grid-column-full">
            <h4 class="govuk-heading-m"> CASE/04 </h4>
            <h1 class="govuk-heading-xl">Title CASE/04</h1>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full govuk-body">Transport EN, Highways EN
                    <br>
                    <br><span class="govuk-tag govuk-tag--green pins-tag--no-max-width">Pre-Application</span>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row govuk-!-margin-left-0 display--flex">
        <div class="pins-list-menu-container">
            <aside class="govuk-!-margin-bottom-8 pins-list-menu" aria-label="Case navigation">
                <h2 class="govuk-visually-hidden">Case Details Menu</h2>
                <nav>
                    <ul class="gov-list pins-list-menu">
                        <li><a class="govuk-link " href="/applications-service/case/4/"> Overview</a>
                        </li>
                        <li><a class="govuk-link " href="/applications-service/case/4/key-dates"> Key dates</a>
                        </li>
                        <li><a class="govuk-link " href="/applications-service/case/4/project-team"> Project team</a>
                        </li>
                        <li><a class="govuk-link " href="/applications-service/case/4/project-documentation"> Project documentation</a>
                        </li>
                        <li><a class="govuk-link " href="/applications-service/case/4/project-updates"> Project updates</a>
                        </li>
                        <li><a class="govuk-link " href="/applications-service/case/4/examination-timetable"> Examination timetable</a>
                        </li>
                    </ul>
                </nav>
            </aside>
        </div>
        <div class="govuk-grid-column-full">
            <h2 class="govuk-heading-m">Project information</h2>
            <table class="govuk-table">
                <caption class="govuk-table__caption govuk-visually-hidden">Project information</caption>
                <tbody class="govuk-table__body">
                    <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Case reference number</th>
                        <td class="govuk-table__cell">CASE/04</td>
                        <td class="govuk-table__cell"></td>
                    </tr>
                    <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Material change</th>
                        <td class="govuk-table__cell">No</td>
                        <td class="govuk-table__cell text-align--right"><a class="govuk-link" href="/applications-service/case/4/edit/material-change"
                            id=""> Change</a>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Sector</th>
                        <td class="govuk-table__cell">Transport EN</td>
                        <td class="govuk-table__cell"></td>
                    </tr>
                    <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Subsector</th>
                        <td class="govuk-table__cell">Highways EN</td>
                        <td class="govuk-table__cell"></td>
                    </tr>
                    <tr class="govuk-table__row">
                        <th scope="row" class="govuk-table__header">Case stage</th>
                        <td class="govuk-table__cell">Pre-Application</td>
                        <td class="govuk-table__cell text-align--right"><a class="govuk-link" href="/applications-service/case/4/edit/stage" id=""> Change</a>
                        </td>
                    </tr>
                </tbody>
            </table>
            <div class="govuk-accordion govuk-!-margin-top-5" data-module="govuk-accordion"
            id="">
                <div class="govuk-accordion__section">
                    <div class="govuk-accordion__section-header">
                        <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="-heading-1"> Project details</span></h2>
                    </div>
                    <div id="-content-1" class="govuk-accordion__section-content">
                        <table class="govuk-table project-details">
                            <caption class="govuk-table__caption govuk-visually-hidden">Project details</caption>
                            <tbody class="govuk-table__body">
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Material change</th>
                                    <td class="govuk-table__cell">No</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/material-change"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Regions</th>
                                    <td class="govuk-table__cell project-details__regions">London EN, Yorkshire EN</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/regions"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Case stage</th>
                                    <td class="govuk-table__cell">Pre-Application</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/stage" id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Project page</th>
                                    <td class="govuk-table__cell project-details__project-page"></td>
                                    <td class="govuk-table__cell"></td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Project name</th>
                                    <td class="govuk-table__cell project-details__name">Title CASE/04</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/name" id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Project description</th>
                                    <td class="govuk-table__cell project-details__project-description">Amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore
                                        et dolore magna aliqua Ut enim ad minim veniam quis nostrud exercitation
                                        ullamco laboris nisi ut aliquip ex ea commodo consequat</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/description"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Project location</th>
                                    <td class="govuk-table__cell project-details__project-location">London</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/project-location"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Project email address</th>
                                    <td class="govuk-table__cell project-details__team-email">some@ema.il</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/team-email"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Grid references</th>
                                    <td class="govuk-table__cell project-details__grid-references">123456 (Easting)
                                        <br>987654 (Northing)</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/grid-references"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                                <tr class="govuk-table__row">
                                    <th scope="row" class="govuk-table__header">Map zoom level</th>
                                    <td class="govuk-table__cell project-details__zoom-level">City EN</td>
                                    <td class="govuk-table__cell text-align--right pins-table__cell--s"><a class="govuk-link" href="/applications-service/case/4/edit/zoom-level"
                                        id=""> Change</a>
                                    </td>
                                </tr>
                            </tbody>
                        </table>
                    </div>
                </div>
                <div class="govuk-accordion__section">
                    <div class="govuk-accordion__section-header">
                        <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="-heading-2"> Applicant information</span></h2>
                    </div>
                    <div id="-content-2" class="govuk-accordion__section-content">
                        <dl class="govuk-summary-list">
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Organisation name</dt>
                                <dd class="govuk-summary-list__value">Org name</dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-organisation-name">Change</a>
                                </dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Contact name (Internal use only)</dt>
                                <dd                                 class="govuk-summary-list__value">John Smith</dd>
                                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-full-name">Change</a>
                                    </dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address (Internal use only)</dt>
                                <dd                                 class="govuk-summary-list__value">Applicant address, London, ABC123</dd>
                                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-address">Change</a>
                                    </dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Website</dt>
                                <dd class="govuk-summary-list__value"><a class="govuk-link" href="website.web">website.web</a>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-website">Change</a>
                                </dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Email address (Internal use only)</dt>
                                <dd                                 class="govuk-summary-list__value">email@email.co</dd>
                                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-email">Change</a>
                                    </dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Telephone number (Internal use only)</dt>
                                <dd                                 class="govuk-summary-list__value">001</dd>
                                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/applications-service/case/4/edit/applicant-telephone-number">Change</a>
                                    </dd>
                            </div>
                        </dl>
                    </div>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`Applications case pages Unpublish case page GET /case/123/unpublish should render the page with the right info 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <form id="pins-publish-case" class="govuk-grid-row " method="post" action="">
        <div class="govuk-grid-column-full">
            <h1 class="govuk-heading-l govuk-!-margin-bottom-8">Unpublish the project</h1>
            <p class="govuk-body govuk-!-margin-bottom-2">Case: Title CASE/04</p>
            <p class="govuk-body govuk-!-margin-bottom-6">Reference: CASE/04</p>
        </div>
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-warning-text"><span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                <strong                 class="govuk-warning-text__text"><span class="govuk-visually-hidden">Warning</span> Unpublishing will remove
                    the project page and any associated content from the NI website.
                    <br>
                    <br>You will be able to republish the project and content again.</strong>
            </div>
        </div>
        <div class="govuk-grid-column-full">
            <button type="submit" class="govuk-button govuk-button--warning govuk-!-margin-top-5"
            data-module="govuk-button">Unpublish project</button>
        </div>
    </form>
</main>"
`;

exports[`Applications case pages Unpublish case page POST /case/123/unpublish should go to success page if unpublished worked 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-panel govuk-panel--confirmation">
                <h1 class="govuk-panel__title"> Project page successfully unpublished</h1>
                <div class="govuk-panel__body">
                    <p class='govuk-!-font-size-19'>Case: Title CASE/04
                        <br>Reference: CASE/04</p>
                </div>
            </div><a href="/applications-service/case/4/" class="govuk-link"> Go back to Overview</a>
        </div>
    </div>
</main>"
`;
